src/App.module.css
/* commissioner-regular - latin */
@font-face {
  font-family: "Commissioner";
  font-style: normal;
  font-weight: 400;
  src: local(""),
    url("fonts/commissioner-v5-latin-regular.woff2") format("woff2"),
    /* Chrome 26+, Opera 23+, Firefox 39+ */
      url("fonts/commissioner-v5-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

body {
  font-family: "Commissioner", sans-serif;
  min-width: 360px;
}

input,
button {
  font-family: inherit;
}

.logoWrapper {
  position: absolute;
  top: -5px;
  right: 0;
}

.rules {
  margin-bottom: 16px;
  width: 80%;
}

.formColorPickerWrapper {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
}

.pickColor {
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 10px;
}

